tests/mypy/mypy_function_wrapper_fn_t5.out
tests/mypy/mypy_function_wrapper_fn_t5.py:14: error: Need type annotation for "wrapper"  [var-annotated]
tests/mypy/mypy_function_wrapper_fn_t5.py:14: error: Argument 1 to "function_wrapper" has incompatible type "str"; expected "Callable[[Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
tests/mypy/mypy_function_wrapper_fn_t5.py:15: error: Argument 1 to "function_wrapper" has incompatible type "None"; expected "Callable[[Callable[[VarArg(Never), KwArg(Never)], Any], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
Found 3 errors in 1 file (checked 1 source file)
